--- a/index.html
+++ b/index.html
@@ -146,6 +146,47 @@
           </div>    
     </section>
 
+    <!-- ============== Image Slider ============== -->
+
+    <section class="Welcome-Section">
+        <div class="container">
+            <div class="welcome_bakery_inner">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="main_title">
+                            <h2>Welcome to our Bakery</h2>
+                            <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur uis autem vel eum.</p>
+                        </div>
+                        <div class="welcome_left_text">
+                            <p>"Welcome to Al-Hamra Bakers Where Every Slice Tells a Story! From elegant birthday cakes to delightful cupcakes, we bake with love, using the finest ingredients to create unforgettable moments. Taste the joy in every bite!"</p>
+                            
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="welcome_img">
+                            <img class="img-fluid" src="./Images/pink-sign-that-says-welcome-bakery_588675-5258.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="inner_feature_cakes">
+                <div class="col-lg-6">
+                    <div class="main_title">
+                        <h2>Our Featured Cakes</h2>
+                    </div>
+                </div>
+                <div class="owl-carousel owl-theme">
+                    <div class="item"><img src="./Images/c-feature-1.jpg" alt=""></div>
+                    <div class="item"><img src="./Images/c-feature-2.jpg" alt=""></div>
+                    <div class="item"><img src="./Images/c-feature-3.jpg" alt=""></div>
+                    <div class="item"><img src="./Images/c-feature-4.jpg" alt=""></div>
+                </div>
+        </div>
+    </section>
+
+
       <h1>asdasdasd</h1>
       <h1>asdasdasd</h1>
       <h1>asdasdasd</h1>
