--- a/index.html
+++ b/index.html
@@ -258,113 +258,94 @@
 
     <!-- ============== Our-Cakes-Area ============== -->
 
-    <section class="Our-Cakes-Area mt-5">
-        <div class="our_cakes_text">
-            <h2 data-aos='fade-up'>Our Cakes</h2>
+    <section class="portfolio">
+	
+        <div class="section-head">
+            <h1>Our Cakes</h1>
         </div>
-        <div class="ourCakes-filter-area mt-5">
-            <div class="cake-filter">
-                <ul class="list-style">
-                    <li data-aos='fade-up' class="active" data-filter="*"><a href="#">All</a></li>
-                    <li data-aos='fade-up' data-aos-delay="100" data-filter=".cakes"><a href="#">Cakes</a></li>
-                    <li data-aos='fade-up' data-aos-delay="200" data-filter=".Cup-Cakes"><a href="#">Cup Cakes</a></li>
-                    <li data-aos='fade-up' data-aos-delay="300" data-filter=".Brownies" class="m-0"><a
-                            href="#">Brownies</a></li>
-                </ul>
-            </div>
-
-            <div class="cake-filter-full grid_portfolio_area" data-aos='fade-up'>
-                <div class="cake-filter-item cakes">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-1.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+    
+        <main class="container">
+            <ul class="button-group">
+                <li class="button active" data-filter="*"><button>All</button></li>
+                <li class="button" data-filter=".design"><button>Cakes</button></li>
+                <li class="button" data-filter=".development"><button>Cakes</button></li>
+                <li class="button" data-filter=".logo"><button>Cakes</button></li>
+            </ul>
+            <div class="gallery row mt-4">
+                <div class="item design col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-1.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item cakes">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-2.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                <div class="item design col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-2.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item cakes">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-3.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                <div class="item development col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-3.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item cakes">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-4.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                <div class="item development col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-4.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item Cup-Cakes">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-5.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                <div class="item development col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-5.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item Cup-Cakes">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-6.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                <div class="item logo col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item Cup-Cakes">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-7.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                <div class="item logo col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item Brownies">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-8.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                <div class="item logo col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item Brownies">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-9.jpg" alt="">
-                    </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                <div class="item logo col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-
-                <div class="cake-filter-item Brownies">
-                    <div class="cake-filter-img">
-                        <img class="img-fluid" src="./Images/portfolio-3.jpg" alt="">
+                <div class="item logo col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
-                    <div class="cake-filter-text">
-                        <h4>Chocolate</h4>
+                </div>
+                <div class="item logo col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="item logo col-lg-3 col-md-4 col-6">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
     </section>
 
     <!-- ============== Menu Section ============== -->
@@ -526,6 +507,7 @@
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/isotope.pkgd.min.js"></script>
     <script src="./js/aos.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
