--- a/index.html
+++ b/index.html
@@ -272,73 +272,73 @@
                 <li class="button" data-filter=".logo"><button>Cakes</button></li>
             </ul>
             <div class="gallery row mt-4">
-                <div class="item design col-lg-3 col-md-4 col-6">
+                <div class="item design col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-1.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item design col-lg-3 col-md-4 col-6">
+                <div class="item design col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-2.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item development col-lg-3 col-md-4 col-6">
+                <div class="item development col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-3.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item development col-lg-3 col-md-4 col-6">
+                <div class="item development col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-4.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item development col-lg-3 col-md-4 col-6">
+                <div class="item development col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-5.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo col-lg-3 col-md-4 col-6">
+                <div class="item logo col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo col-lg-3 col-md-4 col-6">
+                <div class="item logo col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo col-lg-3 col-md-4 col-6">
+                <div class="item logo col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo col-lg-3 col-md-4 col-6">
+                <div class="item logo col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo col-lg-3 col-md-4 col-6">
+                <div class="item logo col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo col-lg-3 col-md-4 col-6">
+                <div class="item logo col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo col-lg-3 col-md-4 col-6">
+                <div class="item logo col-lg-3 col-md-4 col-sm-6 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
