--- a/index.html
+++ b/index.html
@@ -271,74 +271,74 @@
                 <li class="button" data-filter=".development"><button>Cakes</button></li>
                 <li class="button" data-filter=".logo"><button>Cakes</button></li>
             </ul>
-            <div class="gallery  mt-4">
-                <div class="item design ">
+            <div class="gallery row mt-4">
+                <div class="item design col-lg-2 col-md-3 col-sm-4 col-6">
                     <img class="img-fluid" src="./Images/portfolio-1.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item design ">
+                <div class="item design col-lg-2 col-md-3 col-sm-4 col-6">
                     <img class="img-fluid" src="./Images/portfolio-2.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item development  ">
+                <div class="item development col-lg-2 col-md-3 col-sm-4 col-6 ">
                     <img class="img-fluid" src="./Images/portfolio-3.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item development   ">
+                <div class="item development  col-lg-2 col-md-3 col-sm-4 col-6 ">
                     <img class="img-fluid" src="./Images/portfolio-4.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item development   ">
+                <div class="item development  col-lg-2 col-md-3 col-sm-4 col-6 ">
                     <img class="img-fluid" src="./Images/portfolio-5.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo   ">
+                <div class="item logo  col-lg-2 col-md-3 col-sm-4 col-6 ">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo  ">
+                <div class="item logo col-lg-2 col-md-3 col-sm-4 col-6 ">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo  ">
+                <div class="item logo  col-lg-2 col-md-3 col-sm-4 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo  ">
+                <div class="item logo col-lg-2 col-md-3 col-sm-4 col-6 ">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo ">
+                <div class="item logo col-lg-2 col-md-3 col-sm-4 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo   ">
+                <div class="item logo   col-lg-2 col-md-3 col-sm-4 col-6">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item logo   ">
+                <div class="item logo  col-lg-2 col-md-3 col-sm-4 col-6 ">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
