--- a/index.html
+++ b/index.html
@@ -272,76 +272,76 @@
                 <li class="button" data-filter=".brownies"><button>Brownies</button></li>
             </ul>
             <div class="gallery text-center row mt-4">
-                <div class="item cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
                     <img class="img-fluid" src="./Images/portfolio-1.jpg">
                     <div class="portfolio-text">
-                        <a href="#">cake</a>
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
                     <img class="img-fluid" src="./Images/portfolio-2.jpg">
                     <div class="portfolio-text">
-                        <a href="#">cake</a>
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/portfolio-3.jpg">
                     <div class="portfolio-text">
-                        <a href="#">cake</a>
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item cup-cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cup-cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/portfolio-4.jpg">
                     <div class="portfolio-text">
-                        <a href="#">cake</a>
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/portfolio-5.jpg">
                     <div class="portfolio-text">
-                        <a href="#">cake</a>
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
-                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
-                    <div class="portfolio-text">
-                        <a href="#">cake</a>
-                    </div>
-                </div>
-                <div class="item cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
-                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
-                    <div class="portfolio-text">
-                        <a href="#">cake</a>
-                    </div>
-                </div>
-                <div class="item cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
-                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
-                    <div class="portfolio-text">
-                        <a href="#">cake</a>
-                    </div>
-                </div>
-                <div class="item brownies col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
-                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
-                    <div class="portfolio-text">
-                        <a href="#">cake</a>
-                    </div>
-                </div>
-                <div class="item brownies col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
                         <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item brownies   col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
-                        <a href="#">cake</a>
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
-                <div class="item brownies  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
                     <img class="img-fluid" src="./Images/portfolio-6.jpg">
                     <div class="portfolio-text">
-                        <a href="#">cake</a>
+                        <a href="#">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="item1 brownies col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="item1 brownies col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="item1 brownies   col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="item1 brownies  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                    <img class="img-fluid" src="./Images/portfolio-6.jpg">
+                    <div class="portfolio-text">
+                        <a href="#">VIEW MORE</a>
                     </div>
                 </div>
             </div>
