--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <section class="Welcome-Section" >
         <div class="container">
-            <div class="welcome_bakery_inner " data-aos="fade-up">
+            <div class="welcome_bakery_inner">
                 <div class="row">
                     <div class="col-lg-6" >
                         <div class="main_title">
@@ -202,7 +202,7 @@
                     <div class="row d-md-flex align-items-center">
                         <div class="col-6 col-md-6 col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center">
                             <div class="block-18">
-                                <div class="text" data-aos="fade-up">
+                                <div class="text" >
                                     <strong id="counter" class="number  ">0</strong>
                                     <span>Years of Experience</span>
                                 </div>
@@ -210,7 +210,7 @@
                         </div>
                         <div class="col-6 col-md-6 col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center">
                             <div class="block-18">
-                                <div class="text" data-aos="fade-up">
+                                <div class="text" >
                                     <strong id="counter1" class="number ">0</strong>
                                     <span>Cakes/Variety</span>
                                 </div>
@@ -218,7 +218,7 @@
                         </div>
                         <div class="col-6 col-md-6 col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center">
                             <div class="block-18">
-                                <div class="text" data-aos="fade-up">
+                                <div class="text" >
                                     <strong id="counter2" class="number ">0</strong>
                                     <span>Staffs</span>
                                 </div>
@@ -226,7 +226,7 @@
                         </div>
                         <div class="col-6 col-md-6 col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center">
                             <div class="block-18">
-                                <div class="text" data-aos="fade-up">
+                                <div class="text" >
                                     <strong id="counter3" class="number c">0</strong>
                                     <span>Happy Customers</span>
                                 </div>
@@ -234,13 +234,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 text-center text-md-left" data-aos="fade-up">
+                <div class="col-md-3 text-center text-md-left" >
                     <p>The amount of love gained by you people is just pure and we are keep on improving our services
                         and tastes.</p>
                 </div>
             </div>
         </div>
-        <div class="container Featured" data-aos='fade-up'>
+        <div class="container Featured" >
             <div class="inner_feature_cakes">
                 <div class="col-lg-6">
                     <div class="main_title">
@@ -492,15 +492,6 @@
     </section>
 
 
-
-
-
-
-
-
-
-
-
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
@@ -509,8 +500,7 @@
     <script src="./js/aos.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
     <script src="app.js"></script>
 
 
