--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 
 <body>
     <!-- ============== Header ============== -->
-
-
     <header class="main-header-area" id="head">
         <div class="top-header">
             <div class="container d-flex justify-content-between pink-header-media">
@@ -62,7 +60,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="#1">
+                                    <a class="nav-link" aria-current="page" href="#head">
                                         <span class="animated-button">
                                             <span>
                                                 <em>H</em><em>o</em><em>m</em><em>e</em>
@@ -71,7 +69,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="#ourcakes">
                                         <span class="animated-button">
                                             <span>
                                                 <em>O</em><em>u</em><em>r</em>
@@ -169,11 +167,11 @@
 
     <!-- ============== Welcome Section ============== -->
 
-    <section class="Welcome-Section" >
+    <section class="Welcome-Section">
         <div class="container">
             <div class="welcome_bakery_inner">
                 <div class="row">
-                    <div class="col-lg-6" >
+                    <div class="col-lg-6">
                         <div class="main_title">
                             <h2>Welcome to our Bakery</h2>
                             <p>Love in every bite, at our bakery, every cake is made special! Crafted with fresh
@@ -187,7 +185,7 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-6" >
+                    <div class="col-lg-6">
                         <div class="welcome_img">
                             <img class="img-fluid" src="./Images/pink-sign-that-says-welcome-bakery_588675-5258.jpg"
                                 alt="">
@@ -202,7 +200,7 @@
                     <div class="row d-md-flex align-items-center">
                         <div class="col-6 col-md-6 col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center">
                             <div class="block-18">
-                                <div class="text" >
+                                <div class="text">
                                     <strong id="counter" class="number  ">0</strong>
                                     <span>Years of Experience</span>
                                 </div>
@@ -210,7 +208,7 @@
                         </div>
                         <div class="col-6 col-md-6 col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center">
                             <div class="block-18">
-                                <div class="text" >
+                                <div class="text">
                                     <strong id="counter1" class="number ">0</strong>
                                     <span>Cakes/Variety</span>
                                 </div>
@@ -218,7 +216,7 @@
                         </div>
                         <div class="col-6 col-md-6 col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center">
                             <div class="block-18">
-                                <div class="text" >
+                                <div class="text">
                                     <strong id="counter2" class="number ">0</strong>
                                     <span>Staffs</span>
                                 </div>
@@ -226,7 +224,7 @@
                         </div>
                         <div class="col-6 col-md-6 col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center">
                             <div class="block-18">
-                                <div class="text" >
+                                <div class="text">
                                     <strong id="counter3" class="number c">0</strong>
                                     <span>Happy Customers</span>
                                 </div>
@@ -234,13 +232,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 text-center text-md-left" >
+                <div class="col-md-3 text-center text-md-left">
                     <p>The amount of love gained by you people is just pure and we are keep on improving our services
                         and tastes.</p>
                 </div>
             </div>
         </div>
-        <div class="container Featured" >
+        <div class="container Featured">
             <div class="inner_feature_cakes">
                 <div class="col-lg-6">
                     <div class="main_title">
@@ -258,12 +256,10 @@
 
     <!-- ============== Our-Cakes-Area ============== -->
 
-    <section class="portfolio">
-	
+    <section class="portfolio mt-5" id="ourcakes">
         <div class="section-head">
             <h1>Our Cakes</h1>
         </div>
-    
         <main class="container">
             <ul class="button-group">
                 <li class="button active" data-filter="*"><button>All</button></li>
@@ -356,15 +352,13 @@
                 <h2>Menu</h2>
             </div>
             <div class="cake_feature_row row">
-
                 <div class="Premium-menu mt-5">
                     <h3>Premium Cakes</h3>
                 </div>
-
                 <div class="col-lg-3 col-md-4 col-12">
                     <div class="cake_feature_item">
                         <div class="cake_img">
-                            <img  src="./Images/al (1).jpg" alt="">
+                            <img src="./Images/al (1).jpg" alt="">
                         </div>
                         <div class="cake_text">
                             <h3>Chocolate Mousse cake</h3>
@@ -441,57 +435,48 @@
             </div>
         </div>
     </section>
-
-
     <!-- ============== Service Section ============== -->
-
     <section class="services-section" id="1">
         <h2 class="services-title mb-5">Services We offer</h2>
-
         <div class="services-container row ">
-
             <div class="service-box col-lg-3 col-md-6">
                 <i class="fas fa-cookie-bite service-icon"></i>
                 <h3 class="service-inner-heading">Cakes</h3>
-                <p class="service-inner-text">Experience the joy of freshly baked cakes made with love, perfect for every occasion and craving.</p>
+                <p class="service-inner-text">Experience the joy of freshly baked cakes made with love, perfect for
+                    every occasion and craving.</p>
             </div>
-
             <div class="service-box col-lg-3 col-md-6">
                 <i class="fas fa-birthday-cake service-icon"></i>
                 <h3 class="service-inner-heading">Tasty Cupcakes</h3>
-                <p class="service-inner-text">Our cupcakes are soft, sweet, and irresistible – little bundles of happiness in every bite!</p>
+                <p class="service-inner-text">Our cupcakes are soft, sweet, and irresistible - little bundles of
+                    happiness in every bite!</p>
             </div>
-
             <div class="service-box col-lg-3 col-md-6">
                 <i class="fas fa-heart service-icon"></i>
                 <h3 class="service-inner-heading">Wedding Cakes</h3>
-                <p class="service-inner-text">Make your big day extra special with our beautifully designed and delicious wedding cakes tailored just for you.</p>
+                <p class="service-inner-text">Make your big day extra special with our beautifully designed and
+                    delicious wedding cakes tailored just for you.</p>
             </div>
-
             <div class="service-box col-lg-3 col-md-6">
                 <i class="fas fa-utensils service-icon"></i>
                 <h3 class="service-inner-heading">Awesome Recipes</h3>
-                <p class="service-inner-text">Discover our secret recipes and baking tips to try at home and surprise your loved ones.</p>
+                <p class="service-inner-text">Discover our secret recipes and baking tips to try at home and surprise
+                    your loved ones.</p>
             </div>
-
             <div class="service-box col-lg-3 col-md-6">
                 <i class="fas fa-book-open service-icon"></i>
                 <h3 class="service-inner-heading">Menu Planner</h3>
-                <p class="service-inner-text">Customize your dream dessert table with our expert menu planning – made to fit your taste and event.</p>
+                <p class="service-inner-text">Customize your dream dessert table with our expert menu planning - made to
+                    fit your taste and event.</p>
             </div>
-
             <div class="service-box col-lg-3 col-md-6">
                 <i class="fas fa-truck service-icon"></i>
                 <h3 class="service-inner-heading">Home Delivery</h3>
-                <p class="service-inner-text">Freshly baked treats delivered right to your doorstep – fast, safe, and always delicious!
-
-                </p>
+                <p class="service-inner-text">Freshly baked treats delivered right to your doorstep - fast, safe, and
+                    always delicious!</p>
             </div>
-
         </div>
     </section>
-
-
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
@@ -502,9 +487,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
     <script src="app.js"></script>
-
-
-
 </body>
 
 </html>
