--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <div class="float-left">
                     <div class="pink-header-icon-1">
                         <i class="fa-solid fa-phone"></i>
-                        +92 307 2460061
+                        +92 315 2611485
                     </div>
                     <div class="pink-header-icon-2">
                         <i class="fa-regular fa-envelope"></i>
-                        info@cakebakery.com
+                        info@alhamrabakers.com
                     </div>
                 </div>
                 <div class="float-right">
@@ -39,6 +39,9 @@
                     <div class="pink-header-icon-4">
                         <a href="https://www.instagram.com/al_hamra_bakers/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     </div>
+                    <div class="pink-header-icon-4">
+                        <a href="https://wa.me/923152611485" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,7 +50,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg  navbar-light">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#"><img src="./Images/NavLogo.png" alt=""></a>
+                        <a class="navbar-brand" href="./index.html"><img src="./Images/NavLogo.png" alt=""></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -238,7 +241,7 @@
                 </div>
             </div>
         </div>
-        <div class="container Featured" data-aos="fade-up">
+        <div class="container Featured">
             <div class="inner_feature_cakes">
                 <div class="col-lg-6">
                     <div class="main_title">
@@ -260,7 +263,10 @@
 
     <!-- ============== Our-Cakes-Area ============== -->
 
-    <section class="portfolio" id="ourcakes" data-aos="fade-up">
+    <div id="ourcakes"></div>
+    <div></div>
+    <div></div>
+    <section class="portfolio"  data-aos="fade-up">
         <div class="section-head">
             <h1>Our Cakes</h1>
         </div>
@@ -272,62 +278,62 @@
                 <li class="button" data-filter=".brownies"><button>Brownies</button></li>
             </ul>
             <div class="gallery text-center row mt-4">
-                <div class="item1 cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 cup-cakes col-lg-2 col-md-4 col-sm-6 col-6 mb-4">
                     <img class="img-fluid" style="object-fit: cover;"  src="./Images/Cup-Cakes (1).jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 cup-cakes col-lg-2 col-md-4 col-sm-6 col-6 mb-4">
                     <img class="img-fluid"  src="./Images/Cup-Cakes (2).jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 cup-cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cup-cakes col-lg-2 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" style="object-fit: cover;"  src="./Images/Cup-Cakes (3).jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 cup-cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cup-cakes  col-lg-2 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" style="object-fit: cover;"  src="./Images/Cup-Cakes (5).jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cakes  col-lg-2 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/Cake Gallery (1).jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cakes  col-lg-2 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/Cake Gallery (2).jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 cakes col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 cakes col-lg-2 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/Cake Gallery (3).jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 cakes  col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 cakes  col-lg-2 col-md-4 col-sm-6 col-6 mb-4">
                     <img class="img-fluid" src="./Images/Cake Gallery (4).jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 brownies col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 brownies col-lg-2 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/Brownies 1.jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 brownies col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 brownies col-lg-2 col-md-4 col-sm-6 col-6 mb-4">
                     <img class="img-fluid" style="object-fit: cover;" src="./Images/Brownies 2.jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 brownies   col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+                <div class="item1 brownies   col-lg-2 col-md-4 col-sm-6 col-6 mb-4">
                     <img class="img-fluid" src="./Images/Brownies 5.jpg">
                     <div class="portfolio-text">
                     </div>
                 </div>
-                <div class="item1 brownies  col-lg-3 col-md-4 col-sm-6 col-6 mb-4 ">
+                <div class="item1 brownies  col-lg-2 col-md-4 col-sm-6 col-6 mb-4 ">
                     <img class="img-fluid" src="./Images/Brownies 4.jpg">
                     <div class="portfolio-text">
                     </div>
@@ -338,9 +344,12 @@
 
     <!-- ============== Menu Section ============== -->
 
+    <div id="menu"></div>
+    <div></div>
+    <div></div>
     <section class="our_cakes_area" id="menu">
         <div class="container">
-            <div class="main_title-menu" data-aos="fade-up">
+            <div class="main_title-menu">
                 <h2>Our Menu</h2>
             </div>
             <div class="cake_feature_row row" data-aos="fade-up">
@@ -577,8 +586,10 @@
     </section>
 
     <!-- ============== Service Section ============== -->
-
-    <section class="services-section" id="service" >
+    <div id="service"></div>
+    <div></div>
+    <div></div>
+    <section class="services-section" >
         <div class="service-inner" data-aos="fade-up">
             <h2 class="services-title mb-5" >Services We offer</h2>
             <div class="services-container row ">
@@ -624,7 +635,10 @@
 
     <!-- ============== About Us Section ============== -->
 
-    <section class="About-Section" id="about" data-aos="fade-up">
+    <div id="about"></div>
+    <div></div>
+    <div></div>
+    <section class="About-Section"  data-aos="fade-up">
         <div class="container about text-center" >
             <h1>About Us</h1>
 
@@ -641,8 +655,10 @@
 
     
     <!-- ============== Contact Us Section ============== -->
-
-    <section class="Contact-Section" id="contact" data-aos="fade-up">
+    <div id="contact"></div>
+    <div></div>
+    <div></div>
+    <section class="Contact-Section"  data-aos="fade-up">
         <div class="container contact text-center" >
             <h1>Contact Us</h1>
             <p>We would love to hear from you! Feel free to reach out for orders, feedback, or any queries.</p>
@@ -657,15 +673,18 @@
         </div>
     </section>
 
+
+    <!-- ============== Footer Section ============== -->
+
     <footer class="text-center">
         <div class="footer-container row">
             <div class="footer-section col-lg-4 col-md-6 col-sm-6 col-12">
                 <h2>Alhamra <span>Bakers</span></h2>
                 <p>Freshly baked with love from our cozy home kitchen. <br> We bring sweetness to your special moments!</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61563115211975" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/al_hamra_bakers/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://wa.me/923152611485" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="footer-section col-lg-4 col-md-6 col-sm-6 col-12 timings">
@@ -686,6 +705,9 @@
             &copy; 2025 Alhamra Bakers. Made with ♥ at Home.
         </div>
     </footer>
+
+
+    <!-- ============== GoToTop Button ============== -->
 
     <button id="goToTopBtn"><i class="fa-solid fa-arrow-up"></i></button>
 
